@@ -1,6 +1,0 @@
-Makefile.in
-aclocal.m4
-admin
-autom4te*.cache
-config.h.in
-configure
