@@ -1,0 +1,19 @@
+.*~$
+^admin/compile$
+^admin/config\.guess$
+^admin/config\.sub$
+^admin/depcomp$
+^admin/install-sh$
+^admin/intltool-extract\.in$
+^admin/intltool-merge\.in$
+^admin/intltool-update\.in$
+^admin/missing$
+^admin/mkinstalldirs$
+^autom4te\.cache.*
+^build.*$
+^po/Makefile\.in\.in$
+^INSTALL$
+^Makefile\.in$
+^aclocal\.m4$
+^config\.h\.in$
+^configure$
