@@ -1,4 +1,4 @@
-CVSTAG = usermode-$$(echo '$(VERSION)' | tr '.' '_')
+HGTAG = 'usermode-$(VERSION)'
 VENDOR=redhat
 
 EXTRA_DIST = 	\
@@ -129,15 +129,14 @@ userhelper.8: $(srcdir)/userhelper.8.in Makefile
 	sed 's,@''SYSCONFDIR@,$(sysconfdir),g' < $(srcdir)/userhelper.8.in > $@
 
 tag:
-	cd $(top_srcdir); cvs tag -cR $(CVSTAG) .
+	cd $(top_srcdir); hg tag $(HGTAG)
 
 forcetag:
-	cd $(top_srcdir); cvs tag -cFR $(CVSTAG) .
+	cd $(top_srcdir); hg tag -f $(HGTAG)
 
 archive:
 	rm -fr /tmp/$(PACKAGE)-export-tmp
-	CVSROOT=`cat $(top_srcdir)/CVS/Root`; cd /tmp; cvs -d $$CVSROOT \
-		export -r $(CVSTAG) -d $(PACKAGE)-export-tmp $(PACKAGE)
+	hg clone -r $(HGTAG) $(abs_top_srcdir) /tmp/$(PACKAGE)-export-tmp
 	cd /tmp/$(PACKAGE)-export-tmp; ./autogen.sh ; \
 		./configure --sysconfdir=/etc --prefix=/usr; make dist
 	mv /tmp/$(PACKAGE)-export-tmp/$(PACKAGE)-$(VERSION).tar.bz2 .
